Refactor widget_date_text -> widget_date_pattern

--- a/app/src/main/res/layout/widget_date.xml
+++ b/app/src/main/res/layout/widget_date.xml
@@ -5,7 +5,7 @@
     android:theme="@style/Theme.OpenWidgetsTheme">
 
     <TextView
-        android:id="@+id/widget_date_text"
+        android:id="@+id/widget_date_pattern"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </RelativeLayout>
