--- a/app/src/main/res/layout/widget_date.xml
+++ b/app/src/main/res/layout/widget_date.xml
@@ -2,9 +2,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/widget_date_background"
-    android:theme="@style/Theme.OpenWidgetsTheme">
+    android:theme="@style/Theme.OpenWidgetsTheme"
+    android:gravity="center"
+    android:background="#55555555">
 
     <TextView
+        android:text="@string/widget_date_clickToStartService"
+        android:textSize="24sp"
+        android:textColor="#ffffffff"
         android:id="@+id/widget_date_pattern"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
