--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,3 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <declare-styleable name="BtcWidgetAttrs">
+        <attr name="btcWidgetBackgroundColor" format="color" />
+        <attr name="btcWidgetTextColor" format="color" />
+    </declare-styleable>
+
+    <attr name="colorControlNormal" format="color" />
 </resources>
